@@ -294,6 +294,7 @@ Shawn Young (drphys)
 Shuo (shenqshuoh)
 sirex (sirexas)
 Sitaram Chamarty
+smoothdad
 smpolymen
 Stas Malavin
 Stas Panteleev
