@@ -3809,8 +3809,8 @@ using 'vicmd' or 'vixcmd'.
 .IP 2. 3
 If all handlers match the following criteria:
  - backgrounded
- - include `%c` and/or `%C`
- - include neither `%f` nor `%F`
+ - include `%c`/`%"c` and/or `%C`/`%"C`
+ - include neither `%f`/`%"f` nor `%F`/`%"F`
 .br
 then each file is executed independently of the rest.
 
